# dromos

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/decisions/: 0000-use-markdown-architectural-decision-records.md  0001-use-rust-for-implementation.md  0002-use-sha256-for-rom-identification.md  0003-use-sqlite-and-petgraph-for-storage.md  0004-store-raw-file-headers.md  0005-export-import-format.md  adr-template.md
docs/rust/: notes.md
migrations/: 001_initial.sql  002_add_title.sql  003_nes_header_fields.sql  004_metadata_fields.sql  005_source_file_header.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: commands.rs  completer.rs  mod.rs  multiline.rs  repl.rs  theme.rs
src/db/: mod.rs  repository.rs  schema.rs
src/diff/: bsdiff.rs  mod.rs
src/exchange/: export.rs  format.rs  import.rs  mod.rs
src/graph/: mod.rs  store.rs
src/rom/: hash.rs  mod.rs  nes.rs  types.rs
src/storage/: manager.rs  mod.rs
