[package]
name = "dromos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
petgraph = "0.7"
bsdiff = "0.2"
thiserror = "2.0"
directories = "6.0"
hex = "0.4"
