[package]
name = "dromos"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyline = "17"
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
petgraph = "0.8"
bsdiff = "0.2"
thiserror = "2.0"
directories = "6.0"
hex = "0.4"
git-version = "0.3"
crossterm = "0.28"
chrono = "0.4"
serde_json = "1"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
