[package]
name = "dromos"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyline = "17"
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
petgraph = "0.8"
bsdiff = "0.2"
bzip2 = "0.6"
thiserror = "2.0"
directories = "6.0"
hex = "0.4"
git-version = "0.3"
crossterm = "0.28"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
